--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -17,17 +17,24 @@ services:
 
   backend:
     build:
-      context: .
+      context: .  # Assuming the Dockerfile is in the root directory, adjust as needed
       dockerfile: Dockerfile
     container_name: backend-container
     ports:
       - "5000:5000"
     depends_on:
       - db
+    entrypoint: /wait-for-it.sh db:5432 -- npm run start
     environment:
-      - DATABASE_URL=postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${POSTGRES_DB}:5432/public
+      - DATABASE_URL=postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@db:5432/${POSTGRES_DB}?schema=public  # Correct the DB URL
     networks:
       - backend
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER} -d ${POSTGRES_DB}"]
+      interval: 10s
+      retries: 5
+      start_period: 30s
+      timeout: 5s
 
 volumes:
   postgres-data:
