--- a/frontend/docker-compose.yml
+++ b/frontend/docker-compose.yml
@@ -1,39 +1,18 @@
-version: '3'
+version: '3.8'
 
 services:
-  backend:
+  frontend:
     build:
-      context: .
+      context: .  # Path to the frontend directory
+    container_name: frontend-container
     ports:
-      - "5000:5000"
-    environment:
-      - DATABASE_URL=postgresql://postgres:${POSTGRES_PASSWORD}@db:5432/${POSTGRES_DB}?schema=public  # Prisma DB URL
-      - NODE_ENV=production
-    depends_on:
-      - db
+      - "8080:80"  # Expose frontend app on port 8080 (map to container's port 80)
     networks:
-      - backend
-    volumes:
-      - ./backend:/app  # Mount the backend source for live reloading (optional)
-
-  db:
-    image: postgres:13
-    container_name: postgres-container
-    ports:
-      - "5432:5432"
-    volumes:
-      - postgres-data:/var/lib/postgresql/data
+      - frontend-network
     environment:
-      POSTGRES_USER: ${POSTGRES_USER}
-      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
-      POSTGRES_DB: ${POSTGRES_DB}
-    networks:
-      - backend
+      NODE_ENV: production
+    restart: always
 
 networks:
-  backend:
+  frontend-network:
     driver: bridge
-
-volumes:
-  postgres-data:
-    driver: local
