--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,18 +6,22 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d dist"
   },
   "devDependencies": {
+    "@types/react-dom": "^18.0.2",
     "@types/react-router-dom": "^5.3.3",
     "typescript": "~5.6.2",
     "vite": "^6.0.1"
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.4.0",
+    "@types/react": "^18.0.2",
     "axios": "^1.7.9",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
     "react-query": "^3.39.3",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.4.0",
@@ -25,6 +29,7 @@
   },
   "main": "index.js",
   "keywords": [],
+  "homepage": "https://ColbyKure.github.io/AltametricTest",
   "author": "",
   "license": "ISC",
   "description": ""
