--- a/backend/.env
+++ b/backend/.env
@@ -8,7 +8,7 @@
 POSTGRES_USER=root
 POSTGRES_PASSWORD=root
 POSTGRES_DB=mydb
-DATABASE_URL=postgresql://root:root@localhost:5432/mydb?schema=public
+DATABASE_URL=postgresql://root:root@localhost:5432/db?schema=public
 
 # Seed data for user authentication
 SEED_USER_EMAIL=user1@gmail.com
