--- a/backend/docker-compose.yml
+++ b/backend/docker-compose.yml
@@ -24,7 +24,7 @@ services:
       - db
     entrypoint: /wait-for-it.sh db:5432 -- npm run start
     environment:
-      - DATABASE_URL=postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@db:5432/${POSTGRES_DB}?schema=public
+      - DATABASE_URL=postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@db:5432/db?schema=public
     networks:
       - backend
     healthcheck:
